--- a/src/components/rightbar/rightbar.css
+++ b/src/components/rightbar/rightbar.css
@@ -1,3 +1,88 @@
 .rightbar {
     flex: 3.5;
+    overflow-y: scroll;
+    height: calc(100vh - 50px);
+}
+
+.rightbar .rightbar-container {
+    padding: 15px;
+}
+
+::-webkit-scrollbar {
+    width: 5px;
+}
+
+::-webkit-scrollbar-track {
+    background: #f1f1f1;
+}
+
+::-webkit-scrollbar-thumb {
+    border-radius: 5px;
+    background: rgb(179, 179, 179);
+}
+
+.rightbar .rightbar-container .birthday-container {
+    display: flex;
+    align-items: center;
+}
+
+.rightbar .rightbar-container .birthday-container .birthday-icon {
+    color: tomato;
+    margin-right: 10px;
+}   
+
+.rightbar .rightbar-container .birthday-container .birthday-text {
+    font-size: 15px;
+    font-weight: 300;
+}
+
+.rightbar .rightbar-container .rightbar-ad {
+    width: 100%;
+    height: 300px;
+    margin: 10px 0;
+    border-radius: 10px;
+    background: rebeccapurple;
+}
+
+.rightbar .rightbar-container .rightbar-title {
+    margin-bottom: 20px;
+}
+
+.rightbar .rightbar-container .rightbar-friend-list {
+    list-style: none;
+}   
+
+.rightbar .rightbar-container .rightbar-friend-list .rightbar-friend {
+    display: flex;
+    align-items: center;
+    margin-bottom: 15px;
+}
+
+.rightbar .rightbar-container .rightbar-friend-list .rightbar-friend .rightbar-profile-container {
+    margin-right: 10px;
+    position: relative;
+}
+
+.rightbar .rightbar-container .rightbar-friend-list .rightbar-friend .rightbar-profile-container .rightbar-profile-image {
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    margin-right: 15px;
+    margin-right: 10px;
+    background: violet;
+}
+
+.rightbar .rightbar-container .rightbar-friend-list .rightbar-friend .rightbar-profile-container .rightbar-profile-online {
+    top: -2px;
+    right: 10px;
+    width: 12px;
+    height: 12px;
+    border-radius: 50%;
+    position: absolute;    
+    background: lightgreen;
+    border: 2px solid white;
+}
+
+.rightbar .rightbar-container .rightbar-friend-list .rightbar-friend .rightbar-username {
+    font-weight: 500;
 }
