--- a/src/components/post/post.css
+++ b/src/components/post/post.css
@@ -23,10 +23,10 @@
 .post .post-container .post-top .post-topleft .post-image {
     width: 32px;
     height: 32px;
+    object-fit: cover;
     border-radius: 50%;
     margin-right: 15px;
     margin-right: 10px;
-    background: cadetblue;
 }
 
 .post .post-container .post-top .post-topleft .post-username {
@@ -49,10 +49,10 @@
 
 .post .post-container .post-center .post-image {
     width: 100%;
-    height: 500px;
+    height: 100%;
     margin-top: 20px;
     border-radius: 10px;
-    background: sandybrown;
+    object-fit: contain;
 }
 
 .post .post-container .post-bottom {
